Complete Case Analysis modified

--- a/missingdata/Complete-Case-Analysis.ipynb
+++ b/missingdata/Complete-Case-Analysis.ipynb
@@ -1431,6 +1431,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>original</th>\n",
+       "      <th>cca</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Normal</th>\n",
+       "      <td>0.820548</td>\n",
+       "      <td>0.820822</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Partial</th>\n",
+       "      <td>0.085616</td>\n",
+       "      <td>0.086402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Abnorml</th>\n",
+       "      <td>0.069178</td>\n",
+       "      <td>0.070822</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Family</th>\n",
+       "      <td>0.013699</td>\n",
+       "      <td>0.014164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alloca</th>\n",
+       "      <td>0.008219</td>\n",
+       "      <td>0.005666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AdjLand</th>\n",
+       "      <td>0.002740</td>\n",
+       "      <td>0.002125</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         original       cca\n",
+       "Normal   0.820548  0.820822\n",
+       "Partial  0.085616  0.086402\n",
+       "Abnorml  0.069178  0.070822\n",
+       "Family   0.013699  0.014164\n",
+       "Alloca   0.008219  0.005666\n",
+       "AdjLand  0.002740  0.002125"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorical_distribution(data, data_cca, 'SaleCondition')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see from the output of the cells above, the distribution of houses in each of the categories, is very similar in the original and complete case dataset, which again, is what is expected if the data is missing completely at random, and the percentage of missing data is small."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
